feat: Introduce ElevenLabs voice configuration and text-to-speech playback for model responses, with UI styling updates and version bump.

--- a/options.html
+++ b/options.html
@@ -280,6 +280,25 @@
                     <input type="password" id="googleKey" placeholder="AIza..." spellcheck="false">
                 </div>
             </div>
+            <!-- ElevenLabs Voice Configuration -->
+            <label style="margin-top: 1.5rem; font-size: 0.9rem; color: #fff; opacity: 0.8; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 5px; margin-bottom: 15px;">
+                Voz (ElevenLabs - Opcional)
+            </label>
+
+            <div class="input-group">
+                <label for="elevenKey">ElevenLabs API Key</label>
+                <div class="input-wrapper">
+                    <input type="password" id="elevenKey" placeholder="xi-..." spellcheck="false">
+                </div>
+            </div>
+
+            <div class="input-group">
+                <label for="elevenVoice">Voice ID (Anime)</label>
+                <div class="input-wrapper">
+                    <input type="text" id="elevenVoice" placeholder="Ej: 21m00Tcm4TlvDq8ikWAM" spellcheck="false">
+                </div>
+            </div>
+
             <button id="saveBtn" class="save-btn">Guardar</button>
             <div id="status"></div>
             <div class="note">
