feat: Rebrand extension to Jinx AI, update version, add ChatGPT shortcut, and refresh UI styling.

--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configuración de Maria AI</title>
+    <title>Configuración de Jinx AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -308,9 +308,9 @@
     <div class="container">
         <div class="hero-header">
             <div class="hero-avatar">
-                <img src="assets/icon.png" alt="Maria AI">
+                <img src="assets/icon.png" alt="Jinx AI">
             </div>
-            <h1 class="hero-title">Maria AI</h1>
+            <h1 class="hero-title">Jinx AI</h1>
         </div>
 
         <div class="content-body">
